Close #27, add a "getType" to select the right class. Add a parameter.

--- a/django/project/inventory/templates/inventory/setHandover.html
+++ b/django/project/inventory/templates/inventory/setHandover.html
@@ -1,6 +1,6 @@
 Ausleihen
 
-<form action="{% url 'inventory:createHandover' pk %}" method="post">
+<form action="{% url 'inventory:createHandover' objType pk %}" method="post">
     {% csrf_token %}
     <table>
         {{ form.as_table }}
