--- a/django/project/inventory/templates/inventory/listEquipment.html
+++ b/django/project/inventory/templates/inventory/listEquipment.html
@@ -13,7 +13,7 @@
         <td>{{ equipment.stock }}</td>
         <td>{{ equipment.sn }}</td>
         <td>{{ equipment.age }}</td>
-        <td><a href="{% url 'inventory:createHandover' equipment.id %}">Verleihen</a></td>
+        <td><a href="{% url 'inventory:createHandover' equipment.getType equipment.id %}">Verleihen</a></td>
     </tr>
     {% endfor %}
 </table>
