close #30, add a detail view with a very simple liste of handovers. little opticle changes in model.

--- a/django/project/inventory/templates/inventory/listWorkplace.html
+++ b/django/project/inventory/templates/inventory/listWorkplace.html
@@ -10,6 +10,7 @@
     <tr>
         <td>{{ workplace.room}}</td>
         <td>{{ workplace.place }}</td>
+        <td><a href="{% url 'inventory:detailWorkplace' workplace.id %}">details</a></td>
     </tr>
     {% endfor %}
 </table>
