close #31 by a simple way

--- a/django/project/inventory/templates/inventory/detailWorkplace.html
+++ b/django/project/inventory/templates/inventory/detailWorkplace.html
@@ -7,11 +7,13 @@
 Ausstattung:
 <table border="2">
     <tr>
-        <th>Room</th>
+        <th>Material</th>
+        <th>Function</th>
     </tr>
     {% for handover in object.handovers %}
     <tr>
         <td>{{ handover}}</td>
+        <td><a href="{% url 'inventory:giveBack' handover.id %}">give back</a></td>
     </tr>
     {% endfor %}
 </table>
