close #33, simple menu to reach the inventory pages

--- a/django/project/inventory/templates/inventory/listCustomer.html
+++ b/django/project/inventory/templates/inventory/listCustomer.html
@@ -1,5 +1,8 @@
-<h1>Geräteliste</h1>
+{% extends 'content.html' %}
 
+{% block title %}Anwender{% endblock %}
+
+{% block content %}
 <table border="2">
     <tr>
         <th>Name</th>
@@ -11,3 +14,4 @@
     </tr>
     {% endfor %}
 </table>
+{% endblock %}
