--- a/django/project/templates/base.html
+++ b/django/project/templates/base.html
@@ -35,7 +35,7 @@ body {
 
 .main {
   margin-left: 240px; /* Same as the width of the sidenav */
-  font-size: 28px; /* Increased text to enable scrolling */
+  font-size: 20px; /* Increased text to enable scrolling */
   padding: 0px 10px;
 }
 
@@ -47,10 +47,12 @@ body {
 </head>
 <body>
   <div class="sidenav">
-  <a href="{% url 'inventory:listEquipment' %}">listEquipment</a>
-  <a href="{% url 'inventory:listWorkplace' %}">listWorkplace</a>
-  <a href="{% url 'inventory:listCustomer' %}">listCustomer</a>
-</div>
+  {% if user.is_authenticated %}
+    <a href="{% url 'inventory:listEquipment' %}">listEquipment</a>
+    <a href="{% url 'inventory:listWorkplace' %}">listWorkplace</a>
+    <a href="{% url 'inventory:listCustomer' %}">listCustomer</a>
+  {% endif %}
+  </div>
   <div class="main">
     {% block content_page %}
     {% endblock %}
