--- a/django/project/templates/base.html
+++ b/django/project/templates/base.html
@@ -48,6 +48,8 @@ body {
 <body>
   <div class="sidenav">
   {% if user.is_authenticated %}
+    <a href="{% url 'inventory:createHardwareClass' %}">add hardware class</a>
+    <a href="{% url 'inventory:listHardwareClass' %}">list hardware class</a>
     <a href="{% url 'inventory:listEquipment' %}">listEquipment</a>
     <a href="{% url 'inventory:listWorkplace' %}">listWorkplace</a>
     <a href="{% url 'inventory:listCustomer' %}">listCustomer</a>
