close #37 with form. Create bulk and individual article.

--- a/django/project/templates/base.html
+++ b/django/project/templates/base.html
@@ -50,6 +50,7 @@ body {
   {% if user.is_authenticated %}
     <a href="{% url 'inventory:createHardwareClass' %}">add hardware class</a>
     <a href="{% url 'inventory:listHardwareClass' %}">list hardware class</a>
+    <a href="{% url 'inventory:createArticle' %}">add article</a>
     <a href="{% url 'inventory:createEquipment' %}">add equipment</a>
     <a href="{% url 'inventory:listEquipment' %}">listEquipment</a>
     <a href="{% url 'inventory:listWorkplace' %}">listWorkplace</a>
