--- a/django/project/templates/base.html
+++ b/django/project/templates/base.html
@@ -51,6 +51,7 @@ body {
     <a href="{% url 'inventory:createHardwareClass' %}">add hardware class</a>
     <a href="{% url 'inventory:listHardwareClass' %}">list hardware class</a>
     <a href="{% url 'inventory:createArticle' %}">add article</a>
+    <a href="{% url 'inventory:listArticle' %}">listArticle</a>
     <a href="{% url 'inventory:createEquipment' %}">add equipment</a>
     <a href="{% url 'inventory:listEquipment' %}">listEquipment</a>
     <a href="{% url 'inventory:listWorkplace' %}">listWorkplace</a>
