#42 not completed, only edit bulk article, add issue for code refactoring to clean actions in forms

--- a/django/project/inventory/templates/inventory/listArticle.html
+++ b/django/project/inventory/templates/inventory/listArticle.html
@@ -23,6 +23,7 @@
         </td>
         <td>{{ article.status }}</td>
         <td>{{ article.getCount }}</td>
+        <td><a href="{% url 'inventory:updateBulkArticle' article.pk %}">edit</a></td> 
     </tr>
     {% endfor %}
 </table>
