--- a/django/project/inventory/templates/inventory/updateArticle.html
+++ b/django/project/inventory/templates/inventory/updateArticle.html
@@ -1,6 +1,6 @@
 {% extends 'content.html' %}
 
-{% block title %}Artikel Anlegen{% endblock %}
+{% block title %}Artikel ändern{% endblock %}
 
 {% block content %}
 <form method="post">
