--- a/django/project/templates/home.html
+++ b/django/project/templates/home.html
@@ -3,17 +3,6 @@
 
 {% block title %}Home{% endblock %}
 
-{% block content %}
-{% if user.is_authenticated %}
-  Hi {{ user.username }}!<br />
-  <a href="{% url 'networkmap:addDevice' %}">Netzwerkgerät hinzufügen</a><br />
-  <a href="{% url 'networkmap:listDevices' %}">Netzwerkgerät auslisten</a><br />
-  <a href="{% url 'computer:lizenzList' %}">Lizenzen auflisten</a><br />
-  <br />
-  <a href="{% url 'logout' %}">Logout</a><br />
-  
-{% else %}
-  <p>You are not logged in</p>
-  <a href="{% url 'login' %}">Log In</a>
-{% endif %}
+{% block content_page %}
+Startseite
 {% endblock %}
