--- a/django/project/inventory/templates/inventory/giveBack.html
+++ b/django/project/inventory/templates/inventory/giveBack.html
@@ -1,15 +1,17 @@
+{% load i18n %}
+{% translate 'Give Back' %}
 <table>
     <tr>
-        <td>Gegenstand: </td>
+        <td>{% translate 'material' %}</td>
         <td>{{ thing }}</td>
     </tr>
     <tr>
-        <td>Nutzer: </td>
+        <td>{% translate 'user' %}</td>
         <td>{{ user }}</td>
     </tr>
 </table>
 
-    <form method="post">{% csrf_token %}
-	<input class="btn btn-success" type="submit" value="Save" />
-	<a href="{% url 'inventory:detailWorkplace' user.id %}" class="btn btn-secondary">Cancel</a>
-    </form>
+<form method="post">{% csrf_token %}
+	<input class="btn btn-success" type="submit" value="{% trans 'Save' %}" />
+	<a href="{% url 'inventory:detailWorkplace' user.id %}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
+</form>
