--- a/django/project/inventory/templates/inventory/createArticle.html
+++ b/django/project/inventory/templates/inventory/createArticle.html
@@ -1,13 +1,14 @@
 {% extends 'content.html' %}
-
-{% block title %}Artikel Anlegen{% endblock %}
+{% load i18n %}
+{% block title %}{% translate 'Add Article' %}{% endblock %}
 
 {% block content %}
+
 <form action="{% url 'inventory:createArticle' %}" method="post">
     {% csrf_token %}
     <table>
         {{ form.as_table }}
     </table>
-    <input type="submit" value="Submit">
+    <input type="submit" value="{% trans 'Save' %}">
 </form>
 {% endblock %}
