--- a/django/project/inventory/templates/inventory/createEquipment.html
+++ b/django/project/inventory/templates/inventory/createEquipment.html
@@ -1,17 +1,17 @@
 {% extends 'content.html' %}
-
+{% load i18n %}
 {% block title %}
     {%if operation == "update" %}
-        Equipment ändern
+        {% trans 'Edit Equipment' %}
     {% else %}
-        Neues Equipment
+        {% trans 'Add Equipment' %}
     {% endif %}
 {% endblock %}
 
 {% block content %}
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Save">
-	<a href="{{ view.get_success_url }}" class="btn btn-secondary">Cancel</a>
+    <input type="submit" value="{% trans 'Save' %}">
+	<a href="{{ view.get_success_url }}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
 </form>
 {% endblock %}
