--- a/django/project/inventory/templates/inventory/createHandover.html
+++ b/django/project/inventory/templates/inventory/createHandover.html
@@ -1,9 +1,10 @@
-Ausleihen
+{% load i18n %}
+{% translate 'Create single Handover' %}
 
 <form action="{% url 'inventory:createHandover' objType pk %}" method="post">
     {% csrf_token %}
     <table>
         {{ form.as_table }}
     </table>
-    <input type="submit" value="Submit">
+    <input type="submit" value="{% trans 'Save' %}">
 </form>
