--- a/django/project/inventory/templates/inventory/listArticle.html
+++ b/django/project/inventory/templates/inventory/listArticle.html
@@ -1,6 +1,6 @@
 {% extends 'content.html' %}
-
-{% block title %}Artikelliste{% endblock %}
+{% load i18n %}
+{% block title %}{% translate 'List Articles' %}{% endblock %}
 
 {% block content %}
 <table border="2">
@@ -9,16 +9,16 @@
         <th>EAN</th>
         <th>Typ</th>
         <th>Status</th>
-        <th>Anzahl</th>
+        <th>{% translate 'Count' %}</th>
     </tr>
     {% for article in object_list %}
     <tr>
         <td>{{ article}}</td>
         <td>{{ article.ean }}</td>
         <td>{% if article.getType == "bulkart" %}
-        Bulk Article
+        {% translate 'Bulk Article' %}
         {% else %}
-        Individual Article
+        {% translate 'Individual Article' %}
         {% endif %}
         </td>
         <td>{{ article.status }}</td>
@@ -28,7 +28,7 @@
         {% else %}
         <a href="{% url 'inventory:updateArticle' article.pk %}">
         {% endif %}
-        edit</a></td> 
+        {% translate 'edit' %}</a></td> 
     </tr>
     {% endfor %}
 </table>
