--- a/django/project/inventory/templates/inventory/listCustomer.html
+++ b/django/project/inventory/templates/inventory/listCustomer.html
@@ -1,6 +1,6 @@
 {% extends 'content.html' %}
-
-{% block title %}Anwender{% endblock %}
+{% load i18n %}
+{% block title %}{% translate 'List of users' %}{% endblock %}
 
 {% block content %}
 <table border="2">
