--- a/django/project/inventory/templates/inventory/listEquipment.html
+++ b/django/project/inventory/templates/inventory/listEquipment.html
@@ -1,6 +1,6 @@
 {% extends 'content.html' %}
-
-{% block title %}Geräteliste{% endblock %}
+{% load i18n %}
+{% block title %}{% translate 'List of devices' %}{% endblock %}
 
 {% block content %}
 <table border="2">
@@ -8,14 +8,15 @@
         <th>Name</th>
         <th>SN or Count</th>
         <th>Position</th>
+        <th colspan="2">{% translate 'action' %}</th>
     </tr>
     {% for equipment in object_list %}
     <tr>
         <td>{{ equipment}}</td>
         <td>{{ equipment.sn }}{{ equipment.stock }}</td>
         <td>{{ equipment.getLastUser }}</td>
-        <td><a href="{% url 'inventory:createHandover' equipment.getType equipment.id %}">Verleihen</a></td>
-        <td><a href="{% url 'inventory:updateEquipment' equipment.id %}">edit</a></td>
+        <td><a href="{% url 'inventory:createHandover' equipment.getType equipment.id %}">{% translate 'handover' %}</a></td>
+        <td><a href="{% url 'inventory:updateEquipment' equipment.id %}">{% translate 'edit' %}</a></td>
     </tr>
     {% endfor %}
 </table>
