--- a/django/project/inventory/templates/inventory/listHardwareClass.html
+++ b/django/project/inventory/templates/inventory/listHardwareClass.html
@@ -1,17 +1,17 @@
 {% extends 'content.html' %}
-
-{% block title %}Hardware Klassen{% endblock %}
+{% load i18n %}
+{% block title %}{% translate 'List of hardwareclases' %}{% endblock %}
 
 {% block content %}
 <table border="2">
     <tr>
         <th>Name</th>
-        <th></th>
+        <th>{% translate 'action' %}</th>
     </tr>
     {% for hardwareClass in object_list %}
     <tr>
         <td>{{ hardwareClass.name}}</td>
-        <td><a href="{% url 'inventory:updateHardwareClass' hardwareClass.pk %}">edit</a></td> 
+        <td><a href="{% url 'inventory:updateHardwareClass' hardwareClass.pk %}">{% translate 'edit' %}</a></td> 
     </tr>
     {% endfor %}
 </table>
