--- a/django/project/inventory/templates/inventory/listWorkplace.html
+++ b/django/project/inventory/templates/inventory/listWorkplace.html
@@ -1,12 +1,12 @@
 {% extends 'content.html' %}
-
-{% block title %}Arbeitsplätze{% endblock %}
+{% load i18n %}
+{% block title %}{% translate 'List of workplaces' %}{% endblock %}
 
 {% block content %}
 <table border="2">
     <tr>
-        <th>Room</th>
-        <th>Place</th>
+        <th>{% translate 'room' %}</th>
+        <th>{% translate 'place' %}</th>
         <th>Details</th>
     </tr>
     {% for workplace in object_list %}
