--- a/django/project/inventory/templates/inventory/listEquipment.html
+++ b/django/project/inventory/templates/inventory/listEquipment.html
@@ -6,7 +6,7 @@
 <table border="2">
     <tr>
         <th>Name</th>
-        <th>SN or Count</th>
+        <th>{% translate 'SN or Count' %}</th>
         <th>Position</th>
         <th colspan="2">{% translate 'action' %}</th>
     </tr>
