--- a/django/project/inventory/templates/inventory/createHandover.html
+++ b/django/project/inventory/templates/inventory/createHandover.html
@@ -1,6 +1,9 @@
+{% extends 'content.html' %}
 {% load i18n %}
-{% translate 'Create single Handover' %}
 
+{% block title %}{% translate 'Create single Handover' %}{% endblock %}
+
+{% block content %}
 <form action="{% url 'inventory:createHandover' objType pk %}" method="post">
     {% csrf_token %}
     <table>
@@ -8,3 +11,4 @@
     </table>
     <input type="submit" value="{% trans 'Save' %}">
 </form>
+{% endblock %}
