--- a/django/project/inventory/templates/inventory/giveBack.html
+++ b/django/project/inventory/templates/inventory/giveBack.html
@@ -1,5 +1,8 @@
+{% extends 'content.html' %}
 {% load i18n %}
-{% translate 'Give Back' %}
+{% block title %}{% translate 'Give Back' %}{% endblock %}
+
+{% block content %}
 <table>
     <tr>
         <td>{% translate 'material' %}</td>
@@ -15,3 +18,4 @@
 	<input class="btn btn-success" type="submit" value="{% trans 'Save' %}" />
 	<a href="{% url 'inventory:detailWorkplace' user.id %}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
 </form>
+{% endblock %}
