--- a/django/project/inventory/templates/inventory/createArticle.html
+++ b/django/project/inventory/templates/inventory/createArticle.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<form action="{% url 'inventory:createArticle' %}" method="post">
+<form method="post">
     {% csrf_token %}
     <table>
         {{ form.as_table }}
