--- a/django/project/inventory/templates/inventory/giveBack.html
+++ b/django/project/inventory/templates/inventory/giveBack.html
@@ -9,8 +9,8 @@
         <td>{{ thing }}</td>
     </tr>
     <tr>
-        <td>{% translate 'user' %}</td>
-        <td>{{ user }}</td>
+        <td>{% translate 'place' %}</td>
+        <td>{{ place }}</td>
     </tr>
 </table>
 
