--- a/django/project/inventory/templates/inventory/createArticle.html
+++ b/django/project/inventory/templates/inventory/createArticle.html
@@ -9,6 +9,8 @@
     <table>
         {{ form.as_table }}
     </table>
-    <input type="submit" value="{% trans 'Save' %}">
+    <br />
+    <input type="submit" class="button" value="{% trans 'Save' %}">
+	<a href="{% url 'inventory:listArticle' %}" class="button button-cancel">{% trans 'Cancel' %}</a>
 </form>
 {% endblock %}
