--- a/django/project/inventory/templates/inventory/createEquipment.html
+++ b/django/project/inventory/templates/inventory/createEquipment.html
@@ -11,7 +11,7 @@
 {% block content %}
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="{% trans 'Save' %}">
-	<a href="{{ view.get_success_url }}" class="btn btn-secondary">{% trans 'Cancel' %}</a>
+    <input type="submit" class="button" value="{% trans 'Save' %}">
+	<a href="{% url 'inventory:listEquipment' %}" class="button button-cancel">{% trans 'Cancel' %}</a>
 </form>
 {% endblock %}
