--- a/django/project/inventory/templates/inventory/updateArticle.html
+++ b/django/project/inventory/templates/inventory/updateArticle.html
@@ -8,6 +8,7 @@
     <table>
         {{ form.as_table }}
     </table>
-    <input type="submit" value="Submit">
+    <input type="submit" class="button" value="Submit">
+	<a href="{% url 'inventory:listArticle' %}" class="button button-cancel">{% trans 'Cancel' %}</a>
 </form>
 {% endblock %}
