--- a/django/project/templates/base.html
+++ b/django/project/templates/base.html
@@ -12,6 +12,33 @@ body {
   font-family: "Lato", sans-serif;
 }
 
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 10px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 4px;
+  transition-duration: 0.4s;
+}
+
+.button:hover {
+  background-color: #8CCF90; /* Green */
+  color: white;
+}
+
+.button-cancel {
+  background-color: #f44336; /* Green */
+  color: white;
+}
+.button-cancel:hover {
+  background-color: #f48376; /* Green */
+  color: white;
+}
+
 .sidenav {
   height: 100%;
   width: 280px;
