--- a/django/project/templates/base.html
+++ b/django/project/templates/base.html
@@ -110,6 +110,7 @@ body {
     <a href="{% url 'inventory:createEquipment' %}">{% translate 'Add Equipment' %}</a>
     <a href="{% url 'inventory:listEquipment' %}">{% translate 'List Equipment' %}</a>
     <a href="{% url 'inventory:listWorkplace' %}">{% translate 'List Workplace' %}</a>
+    <a href="{% url 'inventory:createCustomer' %}">{% translate 'Add Customer' %}</a>
     <a href="{% url 'inventory:listCustomer' %}">{% translate 'List Customer' %}</a>
     <h1>System</h1>
     <a href="{% url 'logout' %}">Logout</a>
