to #76 too. The workplace now can be add and changed too.

--- a/django/project/inventory/templates/inventory/listWorkplace.html
+++ b/django/project/inventory/templates/inventory/listWorkplace.html
@@ -8,7 +8,7 @@
         <th>{% translate 'room' %}</th>
         <th>{% translate 'place' %}</th>
         <th>{% translate 'owner' %}
-        <th>Details</th>
+        <th colspan="2">{% translate 'action' %}</th>
     </tr>
     {% for workplace in object_list %}
     <tr>
@@ -16,6 +16,7 @@
         <td>{{ workplace.place }}</td>
         <td>{% trans "not assigned" as default_customer %} {{ workplace.customer|default:default_customer }}</td>
         <td><a href="{% url 'inventory:detailWorkplace' workplace.id %}">details</a></td>
+        <td><a href="{% url 'inventory:updateWorkplace' workplace.id %}">{% translate 'edit' %}</a></td>
     </tr>
     {% endfor %}
 </table>
