clode #84, add a commend to give over and show in sudtomer and workplace details

--- a/django/project/inventory/templates/inventory/detailCustomer.html
+++ b/django/project/inventory/templates/inventory/detailCustomer.html
@@ -17,6 +17,7 @@
     {% for handover in object.handovers %}
     <tr>
         <td>{{ handover}}</td>
+        <td>{{ handover.commend|default_if_none:"" }}</td>
         <td><a href="{% url 'inventory:giveBack' handover.id %}">{% translate 'give back' %}</a></td>
     </tr>
     {% endfor %}
