--- a/django/project/inventory/templates/inventory/listEquipment.html
+++ b/django/project/inventory/templates/inventory/listEquipment.html
@@ -10,7 +10,7 @@
         <th>Type</th>
         <th><a href="{% url 'inventory:listEquipment' %}?order=sn">{% translate 'SN or Count' %}</a></th>
         <th>Position</th>
-        <th colspan="2">{% translate 'action' %}</th>
+        <th colspan="3">{% translate 'action' %}</th>
     </tr>
     {% for equipment in object_list %}
     <tr>
@@ -38,6 +38,7 @@
         <td>{{ equipment.getLastUser }}</td>
         <td><a href="{% url 'inventory:createHandover' equipment.getType equipment.id %}">{% translate 'handover' %}</a></td>
         <td><a href="{% url 'inventory:updateEquipment' equipment.id %}">{% translate 'edit' %}</a></td>
+        <td><a href="{% url 'inventory:detailEquipment' equipment.id %}">{% translate 'details' %}</a></td>
     </tr>
     {% endfor %}
 </table>
